ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik   # 🔥 ADD THIS LINE

  tls:
  - hosts:
    - sajithsaaji.xyz
    - api.sajithsaaji.xyz
    secretName: tls-secret

  rules:
  - host: sajithsaaji.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 3000

  - host: api.sajithsaaji.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 5000
